fix(navbar,firefox): unexpected icons shift

--- a/web/src/components/navbar/navbar.css
+++ b/web/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 .icon {
-    @apply transition-all hover:cursor-pointer hover:brightness-125;
+    @apply h-full w-full transition-all hover:cursor-pointer hover:brightness-125;
 }
 
 .tab-txt {
